fix: overflow

--- a/console/shell/index.sass
+++ b/console/shell/index.sass
@@ -26,7 +26,7 @@
             overflow: hidden
             
             .tree-content
-                overflow: auto
+                overflow-x: hidden
                 flex-grow: 1
             
             .database-tree
@@ -73,7 +73,6 @@
                     
                     .ant-tree-node-content-wrapper
                         display: flex
-                        overflow: hidden
                         
                         .ant-tree-title
                             display: flex
@@ -172,6 +171,7 @@
                 .database-title
                     display: flex
                     justify-content: space-between
+                    width: 100%
                     
                     .database-actions
                         padding-left: 10px
